@@ -314,6 +314,11 @@
                 <version>${lib.slf4j.version}</version>
             </dependency>
             <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-nop</artifactId>
+                <version>${lib.slf4j.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>ch.qos.logback</groupId>
                 <artifactId>logback-classic</artifactId>
                 <version>${lib.logback.version}</version>
@@ -438,6 +443,16 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
+                    <argLine>
+                        @{argLine}
+                        -Xmx256m
+                        -XX:-TieredCompilation
+                        -XX:TieredStopAtLevel=1
+                        -javaagent:${settings.localRepository}/org/mockito/mockito-core/${lib.mockito.version}/mockito-core-${lib.mockito.version}.jar
+                        -Xshare:off
+                        --add-opens java.base/java.util=ALL-UNNAMED
+                        --add-opens java.base/java.lang=ALL-UNNAMED
+                    </argLine>
                     <!-- Some Alpine tests leave the JVM behind in a dirty state. -->
                     <reuseForks>false</reuseForks>
                 </configuration>
